[gd_scene load_steps=4 format=3 uid="uid://bjx44ncj1xgbb"]

[ext_resource type="Script" path="res://scripts/bullets/bullet.gd" id="1_681qm"]
[ext_resource type="Texture2D" uid="uid://c3rbt2aurg2hi" path="res://sprites/bullet.png" id="2_137s4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_boh06"]
radius = 2.0
height = 6.0

[node name="Bullet" type="Area2D" groups=["Player"]]
collision_layer = 40
collision_mask = 85
script = ExtResource("1_681qm")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_137s4")

[node name="Collision" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_boh06")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 2.38419e-07)
scale = Vector2(0.2, 0.1)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
